--- a/contactus.html
+++ b/contactus.html
@@ -141,6 +141,7 @@
         </div>
     </section>
 
+    
     <footer>
         <div class="container d-none-mobile">
             <div class="footer-contain">
@@ -153,8 +154,12 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
                     <ul class="menu">
-                        <li>About</li>
-                        <li>Contact Us</li>
+                        <li>
+                            <a style="text-decoration: none; color: #232323;" href="about.html">About</a>
+                        </li>
+                        <li>
+                            <a style="text-decoration: none; color: #232323;" href="contactus.html">Contact Us</a>
+                        </li>
                         <li>Support Us</li>
                     </ul>
                 </div>
@@ -197,8 +202,12 @@
                     <div class="col">
                         <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
                         <ul class="menu">
-                            <li>About</li>
-                            <li>Contact Us</li>
+                            <li>
+                                <a style="text-decoration: none; color: #232323;" href="about.html">About</a>
+                            </li>
+                            <li>
+                                <a style="text-decoration: none; color: #232323;" href="contactus.html">Contact Us</a>
+                            </li>
                             <li>Support Us</li>
                         </ul>
                     </div>
