--- a/howitworks.html
+++ b/howitworks.html
@@ -186,8 +186,12 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
                     <ul class="menu">
-                        <li>About</li>
-                        <li>Contact Us</li>
+                        <li>
+                            <a style="text-decoration: none; color: #232323;" href="about.html">About</a>
+                        </li>
+                        <li>
+                            <a style="text-decoration: none; color: #232323;" href="contactus.html">Contact Us</a>
+                        </li>
                         <li>Support Us</li>
                     </ul>
                 </div>
@@ -230,8 +234,12 @@
                     <div class="col">
                         <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
                         <ul class="menu">
-                            <li>About</li>
-                            <li>Contact Us</li>
+                            <li>
+                                <a style="text-decoration: none; color: #232323;" href="about.html">About</a>
+                            </li>
+                            <li>
+                                <a style="text-decoration: none; color: #232323;" href="contactus.html">Contact Us</a>
+                            </li>
                             <li>Support Us</li>
                         </ul>
                     </div>
@@ -265,7 +273,7 @@
             </div>
         </div>
     </footer>
-
+    
     <script src="assets/js/main.js"></script>
 </body>
 </html>
