--- a/products/g-collect.html
+++ b/products/g-collect.html
@@ -134,8 +134,12 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
                     <ul class="menu">
-                        <li>About</li>
-                        <li>Contact Us</li>
+                        <li>
+                            <a style="text-decoration: none; color: #232323;" href="../about.html">About</a>
+                        </li>
+                        <li>
+                            <a style="text-decoration: none; color: #232323;" href="../contactus.html">Contact Us</a>
+                        </li>
                         <li>Support Us</li>
                     </ul>
                 </div>
@@ -178,8 +182,12 @@
                     <div class="col">
                         <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
                         <ul class="menu">
-                            <li>About</li>
-                            <li>Contact Us</li>
+                            <li>
+                                <a style="text-decoration: none; color: #232323;" href="../about.html">About</a>
+                            </li>
+                            <li>
+                                <a style="text-decoration: none; color: #232323;" href="../contactus.html">Contact Us</a>
+                            </li>
                             <li>Support Us</li>
                         </ul>
                     </div>
