--- a/projects.html
+++ b/projects.html
@@ -181,7 +181,7 @@
 
     
     <footer>
-        <div class="container">
+        <div class="container d-none-mobile">
             <div class="footer-contain">
                 <div>
                     <img src="assets/img/logo-gringgo.png" alt="">
@@ -192,8 +192,12 @@
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
                     <ul class="menu">
-                        <li>About</li>
-                        <li>Contact Us</li>
+                        <li>
+                            <a style="text-decoration: none; color: #232323;" href="about.html">About</a>
+                        </li>
+                        <li>
+                            <a style="text-decoration: none; color: #232323;" href="contactus.html">Contact Us</a>
+                        </li>
                         <li>Support Us</li>
                     </ul>
                 </div>
@@ -217,6 +221,56 @@
                     <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
                     <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
                     <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                </div>
+            </div>
+            <div class="small-footer font-inter-regular">
+                <span>Gringgo©  2022</span>
+                <span> All Right Reserved</span>
+            </div>
+        </div>
+        <div class="container d-none-desktop">
+            <div class="footer-mobile">
+                <div>
+                    <img src="assets/img/logo-gringgo.png" alt="">
+                    <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
+                        Gringgo is the home to digital technology development to enable new economic model for sustainable development, that puts people and planet first.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
+                        <ul class="menu">
+                            <li>
+                                <a style="text-decoration: none; color: #232323;" href="about.html">About</a>
+                            </li>
+                            <li>
+                                <a style="text-decoration: none; color: #232323;" href="contactus.html">Contact Us</a>
+                            </li>
+                            <li>Support Us</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
+                        <ul class="menu">
+                            <li>Environment</li>
+                            <li>People</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
+                        <ul class="menu">
+                            <li>Privacy Policy</li>
+                            <li>Terms & Conditions</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Connect Us</p>
+                        <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
+                        <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
+                        <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="small-footer font-inter-regular">
